work with checkboxes

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -18,10 +18,9 @@
 
     </div>
     <button id="create-notes">Create Note</button>
-    <form id="name-form">
-        <input type="text" placeholder="first name" name="firstName">
-        <button>submit</button>
-    </form>
+    <label>
+        <input type="checkbox" name="checkComplete" id="check"> complete?
+    </label>
     <script src="main.js"></script> <!-- placed here cause html is executed sequentially-->
 </body>
 
