--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1>things to do</h1>
     <input type="text" id="add-new-todo" placeholder="add-new-todo">
+    <label>
+        <input type="checkbox" name="complete" id="check-complete"> complete?
+    </label>
     <div id="new-todos"></div>
     <button id='add-todo'>add new todo</button>
 
