refactor notes app

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -24,8 +24,9 @@
     </div>
 
     <button id="create-notes">Create Note</button>
-
-    <script src="main.js"></script> <!-- placed here cause html is executed sequentially-->
+    <script src="notes-functions.js"></script> 
+    <script src="main.js"></script>
+    <!-- js files are placed here cause html is executed sequentially-->
 </body>
 
 </html>
