try js debugger

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>things to do</h1>
-    <input type="text" id="add-new-todo" placeholder="add-new-todo">
+    <input type="text" id="add-new-todo" placeholder="search">
     <label>
         <input type="checkbox" name="complete" id="check-complete"> complete?
     </label>
