add uuid for notes and todos

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -13,7 +13,7 @@
     <h1>Notes app</h1>
     <h2>Take notes and never forget</h2>
     <input type="text" id="search" placeholder="filter todos">
-    
+
     <select id="selector">
         <option>sort by last edited</option>
         <option>sort by recently created</option>
@@ -24,7 +24,8 @@
     </div>
 
     <button id="create-notes">Create Note</button>
-    <script src="notes-functions.js"></script> 
+    <script src="uuid.js"></script>
+    <script src="notes-functions.js"></script>
     <script src="main.js"></script>
     <!-- js files are placed here cause html is executed sequentially-->
 </body>
