--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -21,6 +21,7 @@
         <input type="text" placeholder="add-todo" name="todoName">
         <button>submit</button>
     </form>
+    <script src="uuid.js"></script>
     <script src="todo-functions.js"></script>
     <script src="main.js"></script>
 </body>
