--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <a href="/edit.html">edit note</a>
+    <a href="index.html"> Home</a>
+    <input type="text" id="note-title" placeholder="Note title">
+    <textarea id="note-body" cols="30" rows="10" placeholder="Enter note text"></textarea>
+    <button id="remove-note">Remove Note</button>
+    <script src="notes-functions.js"></script>
+    <script src="notes-edit.js"></script>
 </body>
 
 </html>
