--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -13,6 +13,7 @@
     <input type="text" id="note-title" placeholder="Note title">
     <textarea id="note-body" cols="30" rows="10" placeholder="Enter note text"></textarea>
     <button id="remove-note">Remove Note</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="notes-functions.js"></script>
     <script src="notes-edit.js"></script>
 </body>
