--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -24,9 +24,11 @@
     </div>
 
     <button id="create-notes">Create Note</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="uuid.js"></script>
     <script src="notes-functions.js"></script>
     <script src="main.js"></script>
+   
     <!-- js files are placed here cause html is executed sequentially-->
 </body>
 
