--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -15,9 +15,9 @@
     <input type="text" id="search" placeholder="filter todos">
 
     <select id="selector">
-        <option>sort by last edited</option>
-        <option>sort by recently created</option>
-        <option>sort alphabetically</option>
+        <option value="byEdited">sort by last edited</option>
+        <option value="byCreated">sort by recently created</option>
+        <option value="alphabetical">sort alphabetically</option>
     </select>
     <div id="notes">
 
