--- a/hangman/index.html
+++ b/hangman/index.html
@@ -13,9 +13,9 @@
     <p id="guesses"></p>
     <button id="reset">Reset</button>
 
-    <script src="requests.js"></script>
-    <script src="hangman.js"></script>
-    <script src="app.js"></script>
+    <script src="scripts/requests.js"></script>
+    <script src="scripts/hangman.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
