--- a/hangman/index.html
+++ b/hangman/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!-- css -->
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="images/favicon.png ">
+    <title>Hangman</title>
 </head>
 
 <body>
-    <p id="puzzle"></p>
-    <p id="guesses"></p>
-    <button id="reset">Reset</button>
+    <div>
+        <div id="puzzle" class="puzzle"></div>
+        <p id="guesses"></p>
+        <button class="button" id="reset">Reset</button>
+    </div>
+
 
     <script src="scripts/requests.js"></script>
     <script src="scripts/hangman.js"></script>
