restructure notes app

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes App</title>
+    <!-- css -->
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -25,10 +27,10 @@
 
     <button id="create-notes">Create Note</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
-    <script src="uuid.js"></script>
-    <script src="notes-functions.js"></script>
-    <script src="main.js"></script>
-   
+    <script src="scripts/uuid.js"></script>
+    <script src="scripts/notes-functions.js"></script>
+    <script src="scripts/main.js"></script>
+
     <!-- js files are placed here cause html is executed sequentially-->
 </body>
 
