--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Edit notes</title>
+    <!-- css -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -15,8 +17,8 @@
     <textarea id="note-body" cols="30" rows="10" placeholder="Enter note text"></textarea>
     <button id="remove-note">Remove Note</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
-    <script src="notes-functions.js"></script>
-    <script src="notes-edit.js"></script>
+    <script src="scripts/notes-functions.js"></script>
+    <script src="scripts/notes-edit.js"></script>
 </body>
 
 </html>
