--- a/notes-app/edit.html
+++ b/notes-app/edit.html
@@ -11,11 +11,26 @@
 </head>
 
 <body>
-    <a href="index.html"> Home</a>
-    <input type="text" id="note-title" placeholder="Note title">
-    <span id=last-edited></span>
-    <textarea id="note-body" cols="30" rows="10" placeholder="Enter note text"></textarea>
-    <button id="remove-note">Remove Note</button>
+    <header class="header">
+        <div class="container">
+            <h1 class="header__title">Notes app</h1>
+            <h2 class="header__subtitle">Take notes and never forget</h2>
+        </div>
+    </header>
+    <div class="actions">
+        <div class="actions__container actions__container--spaced">
+            <a href="index.html">Home</a>
+            <span id=last-edited></span>
+        </div>
+
+    </div>
+    <div class="container">
+        <input type="text" class="title-input" id="note-title" placeholder="Note title">
+        <textarea class="body-input" id="note-body" cols="30" rows="10" placeholder="Enter note text"></textarea>
+        <button class="button button--secondary" id="remove-note">Remove Note</button>
+    </div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="scripts/notes-functions.js"></script>
     <script src="scripts/notes-edit.js"></script>
