--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -8,24 +8,38 @@
     <title>Notes App</title>
     <!-- css -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- favicon -->
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
 </head>
 
 <body>
-    <h1>Notes app</h1>
-    <h2>Take notes and never forget</h2>
-    <input type="text" id="search" placeholder="filter todos">
+    <header class="header">
+        <div class="container">
+            <h1 class="header__title">Notes app</h1>
+            <h2 class="header__subtitle">Take notes and never forget</h2>
+        </div>
+    </header>
+    <div class="actions">
+        <div class="actions__container actions__container--spaced">
+            <input type="text" class="input" id="search" placeholder="filter todos">
 
-    <select id="selector">
-        <option value="byEdited">sort by last edited</option>
-        <option value="byCreated">sort by recently created</option>
-        <option value="alphabetical">sort alphabetically</option>
-    </select>
-    <div id="notes">
+            <select id="selector" class="dropdown">
+                <option value="byEdited">sort by last edited</option>
+                <option value="byCreated">sort by recently created</option>
+                <option value="alphabetical">sort alphabetically</option>
+            </select>
+        </div>
+    </div>
+    <div class="container">
+        <div id="notes">
 
+        </div>
+
+        <button class="button" id="create-notes">Create Note</button>
     </div>
 
-    <button id="create-notes">Create Note</button>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
     <script src="scripts/uuid.js"></script>
     <script src="scripts/notes-functions.js"></script>
