restructure todos app

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo App</title>
+    <!-- css -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="images/favicon.png?v=1">
 </head>
 
 <body>
@@ -21,9 +24,9 @@
         <input type="text" placeholder="add-todo" name="todoName">
         <button>submit</button>
     </form>
-    <script src="uuid.js"></script>
-    <script src="todo-functions.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/uuid.js"></script>
+    <script src="scripts/todo-functions.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 
