--- a/notes-app/public/index.html
+++ b/notes-app/public/index.html
@@ -40,10 +40,8 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
-    <script src="scripts/uuid.js"></script>
-    <script src="scripts/notes-functions.js"></script>
-    <script src="scripts/main.js"></script>
+
+    <script src="scripts/index-bundle.js"></script>
 
     <!-- js files are placed here cause html is executed sequentially-->
 </body>
